view en like optie toegevoegd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 spring.application.name=auti-women
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
+spring.datasource.url=jdbc:postgresql://localhost:5432/auti-women
+
 spring.datasource.username=postgres
 spring.datasource.password=epic
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.generate-ddl=true
 # tijdens developen create-drop, deze leegt je database bij het opstarten.
 spring.jpa.hibernate.ddl-auto=create-drop
