security dependencies en globalcorsconfig toegevoegd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/auti-women
 
 spring.datasource.username=postgres
-spring.datasource.password=epic
+spring.datasource.password=springboot
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
