--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,10 +20,10 @@ spring.jpa.defer-datasource-initialization=true
 #debug=true
 server.port=1991
 
-my.upload_location= uploads
+#spring.main.allow-bean-definition-overriding=true
 
+my.upload_location=images
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.file-size-threshold=5MB
-spring.servlet.multipart.location=temp123
-spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.file-size-threshold=2MB
+spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
