PasswordEncryptor aangemaakt en extra data.sql om de users te kunnen gebruiken om in de frontend in te loggen

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2MB
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
+
+spring.sql.init.data-locations=classpath:data.sql,classpath:additional_data.sql
